create github pages

--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nmGxudilIGlPzF5ukQg2HK3+ntOTzVWqyNGbm3sdyFZ+Z4HH9MT1fzoG/USXWcfhBG35PW8NpkaB1zUPwp8IHLtUTiuDxGlLf65I+SxBSNKPUaeotwdFqLVdwa2WOcxf">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OrfpwKCkX+/NdXbpw4pLMcDgLXLpUAlsQeJO8p1Hfc/TnwfRzDp7b0II4aGV0o5/rCeyXQ8nKUd27ZnbhppQXIIQvXauXZJcR1pFMkU/9+VLGh0q8yqbntx8GktE7aTH">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
