--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -164,8 +164,8 @@
         
 
         <div class="media-container-row mt-5 pt-3">
-            <div class="mbr-figure" style="width: 42%;">
-                <img src="assets/images/ffa-400x321.jpg" alt="Mobirise" title="">
+            <div class="mbr-figure" style="width: 39%;">
+                <img src="assets/images/sam-sharpe-waldron-239x320.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -182,17 +182,15 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">This week's Barrett Insurance Student of the Week Award of Excellence recipients are a pair of students who have together accomplished something no other student at Jonesville High School has ever done, they placed 1st in the National FFA Science Fair!
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Sam Sharpe!
 <br>
-<br>Alice Hughes (senior) and Shannon Rossman (senior) entered the FFA State Science Fair in March. After winning 1st place at this science fair, they submitted their project "The Effect of Interval Time on the Amount and Type of Bacteria Present on Recapped Needles for Swine Vaccinations" at the National Level.
+<br>Sam is a Junior at Waldron High School where he is active on the basketball team and also participates in the Early Middle College program.
 <br>
-<br>Alice Hughes has been a member of the Jonesville FFA since 7th grade. She has served as a leader for our organization by being an officer and is currently the Treasurer. Alice has volunteered over 50 hours of community service. Since her 7th grade year, she has entered five winning science fair projects and state qualifying demonstrations and speeches. Alice is creative in her project ideas and is willing to put forth the effort to make her vision a reality.
+<br>According to Waldron High School teacher Mr. Robert Gifford, “Sam has been showing increasing signs of taking on greater responsibility within the school and himself. He has straight A's on last Semester's report card in addition to taking a weekly online college class. He is participating in the Early Middle College program and is excelling at a faster rate than expected, and I am very proud of him. Finally, he is a teacher's dream because he retains knowledge the first time and is a fast learner.”
 <br>
-<br>Shannon Rossman joined the FFA with a passion for animal research, especially working with her swine. Shannon has entered the science fair each year and has ventured into other areas of leadership, including presenting a state level demonstration on swine showmanship. Shannon has also served as a leader in FFA in several officer positions, currently serving as Vice President. Shannon's ability to communicate with others and encourage others to do their best is one of her leadership skills. Shannon is often found helping others complete their science projects and reviewing their papers.
+<br>Sam plans to attend Jackson College and major in marine biology.
 <br>
-<br>These two talented ladies have worked hard to achieve their goal of winning the National FFA Science Fair. Their combined talents and perseverance have allowed them to succeed.
-<br>
-<br>Congratulations, Alice and Shannon! Keep up the great work.<br></p>
+<br>Congratulations, Sam! Keep up your great work.<br></p>
                             </div>
                         </div>
                     </div>
@@ -221,7 +219,7 @@
                             <div class="col-md-12">
                                 <p class="mbr-text py-5 mbr-fonts-style display-7"><strong>(in alphabetical order by first name) 
 </strong><br>
-<br>Abby Palmiter<br>Adrianna Aemisegger<br>Alecia Hodge<br>Alejandro Jeminez<br>Alexis Higgins<br>Alice Hughes<br>Allie M.<br>Allyson Rubley<br>Alyssa Forbes<br>Alyssa Phillips<br>Amirah Atterab<br>Andrew Rhoades<br>Angelee Coleman<br>Ariana Norman<br>Ariana Nubel<br>Ashley Rushing<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Brenden Bayer<br>Caleb Bills<br>Caleb Brink<br>Carson Laney<br>Carter Riley<br>Cecilia Mende<br>Ciara Small<br>Connor Maddox<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Gabriel Gadwood<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hannah Bensch<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Isabella Thielen<br>Jacob Hart<br>Jacob Scoville<br>James Baughman<br>James Fuller<br>Jay Close<br>Jena Fellabaum<br>Jeremy R.<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Kaylie Weller<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Luke Miller<br>Mackenzie Webb<br>Maci Svacha<br>Madalynn Guideau<br>Magali Perez<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Mary Clementine Gadwood<br>Max Thielen<br>Maxim Hayes<br>Megan LoPresto<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Natalie E<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Raymon Brown<br>Rebecca Butters<br>Ryan Reiniche<br>Samara Voigt<br>Sara Cole<br>Shannon Rossman<br>Sophie Crites<br>Taylor Vogelsong<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Trenton Wortham<br>Zachary Affholter<br>Zach WIlson</p>
+<br>Abby Palmiter<br>Adrianna Aemisegger<br>Alecia Hodge<br>Alejandro Jeminez<br>Alexis Higgins<br>Alice Hughes<br>Allie M.<br>Allyson Rubley<br>Alyssa Forbes<br>Alyssa Phillips<br>Amirah Atterab<br>Andrew Rhoades<br>Angelee Coleman<br>Ariana Norman<br>Ariana Nubel<br>Ashley Rushing<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Brenden Bayer<br>Caleb Bills<br>Caleb Brink<br>Carson Laney<br>Carter Riley<br>Cecilia Mende<br>Ciara Small<br>Connor Maddox<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Gabriel Gadwood<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hannah Bensch<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Isabella Thielen<br>Jacob Hart<br>Jacob Scoville<br>James Baughman<br>James Fuller<br>Jay Close<br>Jena Fellabaum<br>Jeremy R.<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Kaylie Weller<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Luke Miller<br>Mackenzie Webb<br>Maci Svacha<br>Madalynn Guideau<br>Magali Perez<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Mary Clementine Gadwood<br>Max Thielen<br>Maxim Hayes<br>Megan LoPresto<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Natalie E<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Raymon Brown<br>Rebecca Butters<br>Ryan Reiniche<br>Samara Voigt<br>Sam Sharp<br>Sara Cole<br>Shannon Rossman<br>Sophie Crites<br>Taylor Vogelsong<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Trenton Wortham<br>Zachary Affholter<br>Zach WIlson</p>
                             </div>
                         </div>
                     </div>
