--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -165,7 +165,7 @@
 
         <div class="media-container-row mt-5 pt-3">
             <div class="mbr-figure" style="width: 39%;">
-                <img src="assets/images/noah-lee-reading-738x554.jpg" alt="Mobirise" title="">
+                <img src="assets/images/emma-rounds-jonesville-738x492.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -182,13 +182,15 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Noah Lee!
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Emma Rounds!
 <br>
-<br>Noah is a senior at Reading High School where he is active in the Ranger Marching Band and Ranger Pep Band.
+<br>Emma is a senior at Jonesville High School where she is a member of the National Honor Society, and the cross country, basketball and track teams. She helped lead the Jonesville Girls Cross Country team to the recent Big 8 title while winning six out of seven Big 8 races and earning the distinction of All Conference.
 <br>
-<br>According to his teacher Josh Sholler, “Noah Lee is one of the best examples of quiet strong leadership that I have seen in some time. Noah is the High Brass Section Leader for the Ranger Marching Band this year and has really stepped up to the plate. He is an exemplary role model for his section to follow. He has improved tremendously as a trumpet player throughout his time at RHS and is one of the strongest lead trumpet players the band has seen. In addition to leading his section, Noah has stepped up this year to help with equipment set-up and tear-down for the marching band. He arrives early and stays late to make sure the RMB is always ready to go. I am immensely proud of his dedication and the pride that he takes in being a member of the RMB. He wears his uniform with the utmost care and respect. Quite simply, Noah Lee has been critical to our success this year and I am very thankful for his efforts!”
-<br><br>After graduation, Noah plans to explore a career in cybersecurity.
-<br><br>Congratulations, Noah! Keep up your great work<br></p>
+<br>According to her English teacher Mrs. Drake, “Emma is a straight A student with a GPA above 4.0.  She is an intelligent and hardworking student-athlete.”
+<br>
+<br>After graduation, Emma would like to attend the University of Michigan to study nursing.
+<br>
+<br>Congratulations, Emma! Keep up your great work.<br></p>
                             </div>
                         </div>
                     </div>
@@ -217,7 +219,7 @@
                             <div class="col-md-12">
                                 <p class="mbr-text py-5 mbr-fonts-style display-7"><strong>(in alphabetical order by first name) 
 </strong><br>
-<br>Abby Palmiter<br>Adrianna Aemisegger<br>Alecia Hodge<br>Alejandro Jeminez<br>Alexander Draper<br>Alexis Higgins<br>Alice Hughes<br>Allie M.<br>Allyson Rubley<br>Alyssa Forbes<br>Alyssa Phillips<br>Amanda Roberts<br>Amirah Atterab<br>Andrew Rhoades<br>Angelee Coleman<br>Ariana Norman<br>Ariana Nubel<br>Ashley Rushing<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Brenden Bayer<br>Caleb Bills<br>Caleb Brink<br>Carson Laney<br>Carter Riley<br>Cecilia Mende<br>Christopher Butters<br>Ciara Small<br>Connor Maddox<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Gabriel Gadwood<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hannah Bensch<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Isabella Thielen<br>Jacob Hart<br>Jacob Scoville<br>James Baughman<br>James Fuller<br>Jay Close<br>Jena Fellabaum<br>Jeremy R.<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Kaylie Weller<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Luke Miller<br>Mackenzie Webb<br>Maci Svacha<br>Madalynn Guideau<br>Magali Perez<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Mary Clementine Gadwood<br>Max Thielen<br>Maxim Hayes<br>Megan LoPresto<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Natalie E<br>Nick Gould<br>Noah Lee<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Raymon Brown<br>Rebecca Butters<br>Ryan Reiniche<br>Samara Voigt<br>Sam Sharp<br>Sara Cole<br>Shannon Rossman<br>Sophie Crites<br>Taylor Vogelsong<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Trenton Wortham<br>Zachary Affholter<br>Zach WIlson</p>
+<br>Abby Palmiter<br>Adrianna Aemisegger<br>Alecia Hodge<br>Alejandro Jeminez<br>Alexander Draper<br>Alexis Higgins<br>Alice Hughes<br>Allie M.<br>Allyson Rubley<br>Alyssa Forbes<br>Alyssa Phillips<br>Amanda Roberts<br>Amirah Atterab<br>Andrew Rhoades<br>Angelee Coleman<br>Ariana Norman<br>Ariana Nubel<br>Ashley Rushing<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Brenden Bayer<br>Caleb Bills<br>Caleb Brink<br>Carson Laney<br>Carter Riley<br>Cecilia Mende<br>Christopher Butters<br>Ciara Small<br>Connor Maddox<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Emma Rounds<br>Gabe Healy<br>Gabriel Gadwood<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hannah Bensch<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Isabella Thielen<br>Jacob Hart<br>Jacob Scoville<br>James Baughman<br>James Fuller<br>Jay Close<br>Jena Fellabaum<br>Jeremy R.<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Kaylie Weller<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Luke Miller<br>Mackenzie Webb<br>Maci Svacha<br>Madalynn Guideau<br>Magali Perez<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Mary Clementine Gadwood<br>Max Thielen<br>Maxim Hayes<br>Megan LoPresto<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Natalie E<br>Nick Gould<br>Noah Lee<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Raymon Brown<br>Rebecca Butters<br>Ryan Reiniche<br>Samara Voigt<br>Sam Sharp<br>Sara Cole<br>Shannon Rossman<br>Sophie Crites<br>Taylor Vogelsong<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Trenton Wortham<br>Zachary Affholter<br>Zach WIlson</p>
                             </div>
                         </div>
                     </div>
