--- a/newsletter.html
+++ b/newsletter.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="cid-scLbl9edrI" id="image1-ba">
+<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="cid-scLbl9edrI" id="image1-ba">
 
     
 
