--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Li+uUO6vUTz8KFby+BMPUVo9b5BcD8bxzxFBYYdxEYpl8bimS/P+27aNYBoAnsQW7aYYsPNr6DzxRCccyZC0u+GiiYFQWDOwsh7Mq/wkc5Dw2kD8uQJk3q+nbUVeGrRd">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="K5ysaTihK5p65JGHp3iUKQLp6qi0qvHrxnm92/zqVTyLwkqysmh8DC5YtIsdzwNLCAawaAvfTkwgR6uAyyP7zl5tzAOAXoqQbPRpNl/8H2qitjhoiFaV2+aSu/YCZXvZ">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
