create github pages

--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="K5ysaTihK5p65JGHp3iUKQLp6qi0qvHrxnm92/zqVTyLwkqysmh8DC5YtIsdzwNLCAawaAvfTkwgR6uAyyP7zl5tzAOAXoqQbPRpNl/8H2qitjhoiFaV2+aSu/YCZXvZ">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ksB3uJ+hsOEiFfK/2E2l1gLJMRrC9UybQzCloxVv8zAOnTl2nqHwJB6BfKM6MvPsNe7dt2t4mDANrcnpp8AvfztyolLRiOgg4EhX2KtsCW/KN1SItSXCK1NfoG9zkMgw">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
