--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -180,7 +180,7 @@
             <div class="carousel-item">
                     <div class="user col-md-8">
                         <div class="user_image">
-                            <img src="assets/images/dsc0138-2-400x267.png" alt="" title="">
+                            <img src="assets/images/cyndi21-1-400x266.png" alt="" title="">
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7"><strong>Cyndi Barrett<br></strong>Owner<br><br>Hi, my name is Cyndi. My husband, Clint, started Barrett Insurance in 2001. At that time, I supported Clint’s business by working as his accountant. I also worked full time as a human resource/benefits manager for another company. I received my insurance license in 2009. In 2011, I started to work full time for Barrett Insurance. 
