create github pages

--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own site for free</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -165,7 +165,7 @@
 
         <div class="media-container-row mt-5 pt-3">
             <div class="mbr-figure" style="width: 39%;">
-                <img src="assets/images/johnson-molly-carla-stewart-738x922.jpg" alt="Mobirise" title="">
+                <img src="assets/images/berlin-corryn-3-738x984.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -182,15 +182,15 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Molly Johnson!
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Corryn Berlin!
 <br>
-<br>Molly is a freshman at Will Carleton Academy. She enjoys jewelry making, dancing, and listening to music.
+<br>Corryn is a senior at Jonesville High School where she is a member of the National Honor Society, Interact Club, Student Council, and the varsity basketball and soccer teams. Corryn was selected as the Jonesville High School DAR Good Citizen this year, and she is dual enrolled at Jackson College.
 <br>
-<br>According to her teacher Tina Watkins, “Molly has transitioned seamlessly to distance learning. She diligently attends every Zoom meeting and actively participates in those meetings. Molly eagerly completes her work each week and she is always prepared to learn with a smile on her face.”
+<br>According to Jonesville High School staff, “Corryn is an involved and intelligent young woman who shows integrity in and out of the classroom.”
 <br>
-<br>Molly's future interests include photography, business ownership, and social media influence.
+<br>Next year, Corryn plans to attend Bethel University to pursue a degree in graphics design and to play soccer.
 <br>
-<br>Congratulations, Molly! Keep up your great work.<br></p>
+<br>Congratulations, Corryn! Keep up your great work.<br></p>
                             </div>
                         </div>
                     </div>
