--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -125,7 +125,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=place_id:ChIJu45q-rhtPYgRx17KrfbYIwQ" allowfullscreen=""></iframe></div>
+                <div class="google-map"></div>
             </div>
             <div class="col-md-6">
                 
@@ -141,7 +141,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CY2WPP8pJE1Q24a0nDLilmTbaCyhL2cug40sXH2QwHqMDSRSDqD36k694t9KLdNTs86qULDHC7C/C4rus+1jjQJGH1lsw3Le7H3M8BH4+JJTCqw/KH3WVxWtYcMA87zj">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="P9LgtzQc42wGY8+5K+Nm7N41LkChwleEM/yTrEw2gVQkc4Qn27a0WIf4GaXqoCLPxZO5W1qPezpCk01DiS3foRPxcNuyXTu9TRPt8bJb5NTKZ202OwB1MArUzmqrWlTm">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
