create github pages

--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hBg/eKw1URTeDYl02If+dHawKr1AJUIVcsZnTwR54L2VMuotYQF3FpH7GSJibQUTPujdsXJQTKClGU0yCOF7vyhFsC9gAJZpaynxsEnsUeuUTreo3jg0gpqeAKo5V9tM">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bYcQ9FJuY5637lFyH4+YWCqHENEOSq/TOw3RCv5YZX8KQ/Wp+nfNcXP6P+8ari2OljXx4P/z0pIryhIwQqeo77sJb9490hP5a5feZLORkvSFng2KUiWr7YGX7Vb1NHAp">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
