--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WXEqFC4EiAHMGRpF/roR4yyLgVJi1n8y+QpF08/8KrhorXpmIk0XbdG5f5RIqvzn4povbTXs9TPFv5TvNaaBGa3TKSsJoYNnJ9WXqbV4R0wYeYH0QFXHvJ1lKSoIGb9e">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kkMukHegiOzBNHIs353uJKj+ohFOLSvcCen2t9GfXJck60fxLwnj4/t++wZs4XSBJAv5pqXPz61ZD7wIvGb3cZxIuXYhQ0UBltvKS0WjZIOAF3SDKXHZMgMrUVUxi3qT">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
