--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
 
     
 
@@ -361,7 +361,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="R8TVFCoBCIs5zLLWhV0pj4IMRfEgJS2vn45aazfiIfTAY41mYxxjU/Lj1bHOxcWAIQ81F0OMtbv/xWPSwa+7vJMFNZYcdPrd/ySXZV3ILp+HkjKXqH9M7PSnxq9P8c8C">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OnJfQ2Qgcu6406j+xeZlnAR1FhkQCMQJOFNgM7d5fcaezDMWoKxymD1kxFeoQa0BNeer6oHvqj+a0E47pEN5BOZxw5UMPtn7jswJkFXtDKefHiB7zEiTGuWCyeUe4cje">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
