--- a/proposal.html
+++ b/proposal.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -192,7 +192,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form! One of our insurance experts will contact you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="R/mQKarmc1y5BaD8ybDebmnhDBuvQQdWjuxVZRgTozh2O32+jIdQdYnv6vPTQ+6gCdOmxjYewYDYTgawe21fJiL13upJ1wwHaSrap8XEQXa7hyDFPfruxvvilOkz05Xi">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qGiB+D7Hd3RMye3Ysh9JilTOnO6nimYbLZvPke4eVwVTwYKUpvAXXzik+EuBPrR35Rgm8A//4TkeUSwg2bR/MwPK9gp/9sp5eAyQhHavQeHKf68Db+a79FQJsNBX5Tiz">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
