--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -165,7 +165,7 @@
 
         <div class="media-container-row mt-5 pt-3">
             <div class="mbr-figure" style="width: 39%;">
-                <img src="assets/images/berlin-corryn-3-738x984.jpg" alt="Mobirise" title="">
+                <img src="assets/images/alisonsanders-686x960.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -182,15 +182,17 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Corryn Berlin!
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Allison Sanders!
 <br>
-<br>Corryn is a senior at Jonesville High School where she is a member of the National Honor Society, Interact Club, Student Council, and the varsity basketball and soccer teams. Corryn was selected as the Jonesville High School DAR Good Citizen this year, and she is dual enrolled at Jackson College.
+<br>Allison is a senior at Jonesville High School where she is a member of the National Honor Society as well as the volleyball, basketball and track teams. She has been selected as a Rotary scholar, an All State Academic team member, and a consistent member of the Jonesville High School high honor roll.
 <br>
-<br>According to Jonesville High School staff, “Corryn is an involved and intelligent young woman who shows integrity in and out of the classroom.”
+<br>According to JHS staff, “Allison is a very conscientious student who consistently strives to do her best in the classroom and out”
 <br>
-<br>Next year, Corryn plans to attend Bethel University to pursue a degree in graphics design and to play soccer.
+<br>Allison’s high academic performance earned her the title of co-valedictorian of the JHS Class of 2021!
 <br>
-<br>Congratulations, Corryn! Keep up your great work.<br></p>
+<br>During high school she has taken a college bound curriculum that includes dual enrollment classes at Jackson College. This fall, Allison plans to pursue a degree in pharmacology.
+<br>
+<br>Congratulations, Allison! Keep up your great work.<br></p>
                             </div>
                         </div>
                     </div>
