--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QcBtjoOic9eLX8PpNKJZOEWikf2+E7OfH+5AhRlB1nXQJ8kEs2U8LRNMnRdhLiVF/pUyzPRcmF+urnH7kJ+fgxw9i8NMOxVherZPk3nve9n2ViOoo6NIfsQGwcyBRi+D">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="v0p4DzoHfAncgB+aHCKfSAR0/uxEuOmKhbOm1RwxW9uyQ1qbPFX3E4RJGluSnMkikzI+RWZxlyA/4dmxs8IBO5EDUwXmwJ0RnOGcUhfSYZZQFqLojgfsiVvW26kqfC4P">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
