--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/e">make your own site for free</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Old0MuMUNapjGaEXta0k71lSiE4M/sduPxh5kSFl7wm3G/8oRodIZRCcBtWDbtZLJfUazxPyo7pMpvh/efcNzjQMyUkFSMcN9xvzHQX8U1h7NcFbJBSsyS4AVmQi3jWl">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0xJfV9C4Qps7lYkS5YRbj1XNUap9ARd9NUGJR6mGLqqm4OUOUPQCw9uEWppcuEUtUIvGLt0bxYnRAekyVKsmkqyQ96TdGgSyIISP+vzVcDU/3AnNgWdmbv8eUOreyzwh">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
