create github pages

--- a/cyndi.html
+++ b/cyndi.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -158,7 +158,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mEtXhb5UszEBvhwPtJehHqJbVPm0vgWP9oYiibJ1M5fo4efY2nAtrnOW0EPhWBfdoQaAXG+04U8twy+xCdaH3pS3ndDfK9Y2oL73w2hlYRfCtNwKF7rVCur/z2VtXQii">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="S5ZnZftUAJpgR4sfYOh69AGHk45DONIXvlaKnCnxFacfvxJLNAYZyEnnrwoILv8qNPQC8QCUnv2SLEO8wlR5hGXqvGm/v8a5Sy11AfSyc7gmhpH3XlXI02J9nlh72ItQ">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
