--- a/Daniel.html
+++ b/Daniel.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -158,7 +158,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OuJ4XMQm3oQgsSgIU8xzvWkurwY6+BP/L9L3pI39LwdSw4ga9E6MqvdF95bQr8rSrsv3aHw/3FXUCTzIjeRqKwUavjLUuTJKTawpW3LCsuMVbBLlz8/0D60c4TlVmlwZ">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7oUSqC1J1hCJV5+XhjEyN/I4McntMR7LmC/DK41MghakztriLwu9QPITvHukXRO98BD/fIKCSe6j0BvjLSjiGoOYJ0cjuvEXYS4RwC5vIIKBXG5VZMH1D8/k5oixzeF6">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
