--- a/frank.html
+++ b/frank.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web builder</a></section><section class="mbr-section content5 cid-r6QgitsG48" id="content5-4y">
+<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="mbr-section content5 cid-r6QgitsG48" id="content5-4y">
 
     
 
@@ -158,7 +158,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Pm+f5IdBVniW8ioClK8/iR9Ftj2leYtup/oS53QZblWGdqqyuC7mtQt3PxVwXeAepxmBv+cTV32yFypEjuUYI4E5qBC/stYZhQoTJ7Dx/8Bza5bFUOEwVKSB3oWzadnK">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KKHz95YmaZG5BSem/xH6fo29AWzV446/uGKMUk/FIGCpOay8Ycb+Q8zrBdRyRo2Ke0lCUdLsCq+ug2+MU6jDDrh0/j/tXFKPbBPTpZnLjG0CxqyZEp+WhbHKIXLboAaB">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
